--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,72 @@
     <string name="app_name">News App</string>
     <string name="no_internet">You are not connected to the internet.</string>
     <string name="no_news">Oops! No news found. Please try again later.</string>
+    <string name="settings_menu_item">Settings</string>
+    <string name="settings_title">News Settings</string>
+
+
+    <string name="settings_no_of_news_label">No of items</string>
+    <string name="settings_no_of_news_key" translatable="false">min_news</string>
+    <string name="settings_no_of_news_default" translatable="false">10</string>
+
+    <string name="settings_order_by_label">Order By</string>
+    <string name="settings_order_by_key" translatable="false">order_by</string>
+    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>
+
+    <string name="settings_order_by_relevance_label">Relevance</string>
+    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
+
+    <string name="settings_order_by_newest_label">Newest</string>
+    <string name="settings_order_by_newest_value" translatable="false">newest</string>
+
+    <string name="settings_order_by_oldest_label">Oldest</string>
+    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>
+
+    <string name="settings_section_label">Section</string>
+    <string name="settings_section_key" translatable="false">section</string>
+    <string name="settings_section_default" translatable="false">@string/settings_section_all_value</string>
+
+    <string name="settings_section_all_label">All</string>
+    <string name="settings_section_all_value" translatable="false"></string>
+
+    <string name="settings_section_australia_news_label">Australia news</string>
+    <string name="settings_section_australia_news_value" translatable="false">australia-news</string>
+
+    <string name="settings_section_world_news_label">World news</string>
+    <string name="settings_section_world_news_value" translatable="false">world</string>
+
+    <string name="settings_section_media_network_label">Media Network</string>
+    <string name="settings_section_media_network_value" translatable="false">media-network</string>
+
+    <string name="settings_section_society_label">Society</string>
+    <string name="settings_section_society_value" translatable="false">society</string>
+
+    <string name="settings_section_Business_label">Business</string>
+    <string name="settings_section_Business_value" translatable="false">business</string>
+
+    <string name="settings_section_Film_label">Film</string>
+    <string name="settings_section_Film_value" translatable="false">film</string>
+
+
+    <!--string name="settings_type_label">Type of news</string>
+    <string name="settings_type_key" translatable="false">section</string>
+    <string name="settings_type_default" translatable="false">@string/settings_type_of_news_article_label</string>
+
+    <string name="settings_category_label">Category</string>
+    <string name="settings_category_key" translatable="false">category</string>
+    <string name="settings_category_default" translatable="false">@string/settings_category_sports_label</string>
+
+
+    <string name="settings_type_of_news_article_label">Article</string>
+    <string name="settings_type_of_news_article_value" translatable="false">article</string>
+
+    <string name="settings_type_of_news_live_blog_label">Live Blog</string>
+    <string name="settings_type_of_news_live_blog_value" translatable="false">liveblog</string>
+
+
+    <string name="settings_category_sports_label">Sports</string>
+    <string name="settings_category_sports_value" translatable="false">sports</string>
+
+    <string name="settings_category_technology_label">Technology</string>
+    <string name="settings_category_technology_value" translatable="false">technology</string-->
 </resources>
